# -mcpWorking

./: .gitignore  Dockerfile  INSTALLATION.md  LICENSE  README.md  TODO.md  check_db.py  claude_desktop_config.example.json  cursor-mcp-config.example.json  fix_and_expand.py  pyproject.toml  refactor_parent_name.py  refactor_parent_name_safe.py  requirements.txt  server.py  setup.sh  test_convention.py  test_delete.py  test_mcp_client.py  test_mcp_swot.py  todo.md
.github/workflows/: ci.yml
diagrams/: generate_diagrams.py
scripts/: add_conventions.py  fix_and_expand.py  rename_script.py  run_arc42_mcp.sh  test_mcp_meeting.py  update_bausteinsicht_in_neo4j.py
src/neo4j_mcp_server/: __main__.py  core.py  server.py
src/neo4j_mcp_server/tools/: analysis.py  ch01_introduction.py  ch02_constraints.py  ch03_context.py  ch04_strategy.py  ch05_07_diagrams.py  ch08_concepts.py  ch09_decisions.py  ch10_quality_scenarios.py  ch11_risks.py  ch12_glossary.py  ch13_sustainability.py  common.py  search.py
tests/: arc42_acceptance_tests.feature  test___main__.py  test_chapter_modules_smoke.py  test_core_utils.py  test_crud_tools.py  test_read_arc42_chapter.py  test_resources_and_prompts.py  test_search.py  test_server_utils.py  test_update_delete_paths.py
