[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neo4j-mcp-server"
version = "0.1.0"
description = "MCP Server for Neo4j arc42 Documentation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp",
    "neo4j"
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[project.scripts]
neo4j-mcp-server = "neo4j_mcp_server.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
